Enable for per-command authentication
